resolved spacing in pre-footer

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -118,6 +118,7 @@ a{font-weight:400;color:#E91E63;-webkit-transition:all .2s ease-in-out;-moz-tran
 a:hover,a:focus{font-weight:400;color:#E91E63;text-decoration:underline;}
 .col-centered{float:none;margin:0 auto;}
 .no-padding{padding-right:0;padding-left:0;}
+.no-margin{margin-right:0;margin-left:0;}
 .bg-primary{background-color:#270F34!important;}
 .text-center{text-align:center!important;}
 .container{width:100%;overflow: hidden;}
